--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -2,15 +2,21 @@
   <div class="horizontal-container align-center full-height">
     <mat-card>
       <mat-card-title>
-        Log in
+        Register
       </mat-card-title>
       <mat-card-content>
-        <form [formGroup]="loginForm">
+        <form [formGroup]="registerForm">
           <mat-form-field class="full-width">
             <input matInput type="text" placeholder="Email" formControlName="email">
           </mat-form-field>
           <mat-form-field class="full-width">
             <input matInput type="password" placeholder="Password" formControlName="password">
+          </mat-form-field>
+          <mat-form-field class="full-width">
+            <input matInput type="text" placeholder="First Name" formControlName="firstName">
+          </mat-form-field>
+          <mat-form-field class="full-width">
+            <input matInput type="text" placeholder="Last Name" formControlName="lastName">
           </mat-form-field>
         </form>
       </mat-card-content>
@@ -22,3 +28,5 @@
     </mat-card>
   </div>
 </div>
+
+
