tickets list basic impl

--- a/src/app/modules/helpdesk/components/tickets/tickets.component.html
+++ b/src/app/modules/helpdesk/components/tickets/tickets.component.html
@@ -1,1 +1,1 @@
-<app-tickets-list [ticketsObservable]="projectsObservable" ></app-tickets-list>
+<app-tickets-list [ticketsObservable]="ticketsObservable" ></app-tickets-list>
