--- a/src/app/modules/helpdesk/components/tickets/tickets-list/tickets-list.component.html
+++ b/src/app/modules/helpdesk/components/tickets/tickets-list/tickets-list.component.html
@@ -9,11 +9,11 @@
     <!-- Name Column -->
     <ng-container matColumnDef="issue">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Issue</th>
-      <td mat-cell *matCellDef="let row">{{row.name}}</td>
+      <td mat-cell *matCellDef="let row">{{row.issue}}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="[row.id, 'settings']"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="[row.id, 'page']"></tr>
   </table>
 
   <!--<mat-paginator #paginator-->
