update helpdesk module.

--- a/src/app/modules/helpdesk/helpdesk.component.html
+++ b/src/app/modules/helpdesk/helpdesk.component.html
@@ -1,3 +1,7 @@
-<p>
-  helpdesk works!
-</p>
+<mat-toolbar>
+  <div class="space-between" >
+    <span>Helpdesk</span>
+    <span>{{user?.firstName}}</span>
+  </div>
+</mat-toolbar>
+<router-outlet></router-outlet>
