added ticket categories, started attempt to unify work with id name ticket attributes

--- a/src/app/modules/back-office/settings/settings.component.html
+++ b/src/app/modules/back-office/settings/settings.component.html
@@ -1,4 +1,6 @@
 Statuses:
-<app-id-name-ticket-settings [observable]="ticketStatusesObservable"></app-id-name-ticket-settings>
+<app-id-name-ticket-attribute [observable]="ticketStatusesObservable"></app-id-name-ticket-attribute>
 Priorities:
-<app-id-name-ticket-settings [observable]="ticketPrioritiesObservable"></app-id-name-ticket-settings>
+<app-id-name-ticket-attribute [observable]="ticketPrioritiesObservable"></app-id-name-ticket-attribute>
+Categories:
+<app-id-name-ticket-attribute [observable]="ticketCategoriesObservable"></app-id-name-ticket-attribute>
