--- a/src/app/modules/back-office/settings/ticket-attribute-settings/ticket-attribute-list/ticket-attribute-list.component.html
+++ b/src/app/modules/back-office/settings/ticket-attribute-settings/ticket-attribute-list/ticket-attribute-list.component.html
@@ -1,5 +1,5 @@
 <div class="mat-elevation-z8">
-  <table mat-table class="full-width-table" [dataSource]="dataSource" matSort aria-label="Elements">
+  <table mat-table [dataSource]="dataSource" matSort aria-label="Elements">
     <!-- Id Column -->
     <ng-container matColumnDef="id">`
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
@@ -8,8 +8,15 @@
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Issue</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
       <td mat-cell *matCellDef="let row">{{row.name}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="options">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Opt</th>
+      <td mat-cell *matCellDef="let row">
+        <button (click)="removeItem(row.id)">Delete</button>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
