--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <p>
   dashboard works!
   <button (click)="toHelpdesk()">To helpdesk</button>
+  <button (click)="toBackOffice()">To back office</button>
 </p>
