--- a/src/app/modules/helpdesk/components/tickets/tickets.component.html
+++ b/src/app/modules/helpdesk/components/tickets/tickets.component.html
@@ -1,2 +1,1 @@
-<app-tickets-list [ticketsObservable]="ticketStatusesObservable" ></app-tickets-list>
-<app-tickets-list [ticketsObservable]="ticketPrioritiesObservable" ></app-tickets-list>
+<app-tickets-list [tickets]="tickets"></app-tickets-list>
