--- a/src/app/common/auth/register/register.component.html
+++ b/src/app/common/auth/register/register.component.html
@@ -2,15 +2,21 @@
   <div class="horizontal-container align-center full-height">
     <mat-card>
       <mat-card-title>
-        Log in
+        Register
       </mat-card-title>
       <mat-card-content>
-        <form [formGroup]="loginForm">
+        <form [formGroup]="registerForm">
           <mat-form-field class="full-width">
             <input matInput type="text" placeholder="Email" formControlName="email">
           </mat-form-field>
           <mat-form-field class="full-width">
             <input matInput type="password" placeholder="Password" formControlName="password">
+          </mat-form-field>
+          <mat-form-field class="full-width">
+            <input matInput type="text" placeholder="First Name" formControlName="firstName">
+          </mat-form-field>
+          <mat-form-field class="full-width">
+            <input matInput type="text" placeholder="Last Name" formControlName="lastName">
           </mat-form-field>
         </form>
       </mat-card-content>
@@ -19,11 +25,8 @@
           <button mat-raised-button color="primary" (click)="submit()">Submit</button>
         </div>
       </mat-card-actions>
-      <mat-card-actions>
-        <div class="horizontal-container align-right">
-          <button mat-raised-button color="primary" (click)="toRegistration()">Register</button>
-        </div>
-      </mat-card-actions>
     </mat-card>
   </div>
 </div>
+
+
