Saving ticket on changing status.

--- a/src/app/modules/helpdesk/components/tickets/tickets-list/ticket-list-item/status-select/status-select.component.html
+++ b/src/app/modules/helpdesk/components/tickets/tickets-list/ticket-list-item/status-select/status-select.component.html
@@ -1,5 +1,5 @@
 <mat-form-field>
-  <mat-select [value]="predefinedStatusId">
+  <mat-select (valueChange)="statusChange($event)" [value]="statusId">
     <mat-option *ngFor="let ts of ticketStatuses" [value]="ts.id">
       {{ts.name}}
     </mat-option>
