Add user invite.

--- a/src/app/modules/back-office/settings/settings.component.html
+++ b/src/app/modules/back-office/settings/settings.component.html
@@ -4,3 +4,5 @@
 <app-ticket-attribute-settings [ticketAttributeService]="ticketPrioritiesService"></app-ticket-attribute-settings>
 <p>Categories:</p>
 <app-ticket-attribute-settings [ticketAttributeService]="ticketCategoriesService"></app-ticket-attribute-settings>
+<p>Invite user:</p>
+<app-invite-user></app-invite-user>
