--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,5 +1,1 @@
-<p>
-  dashboard works!
-  <button *ngIf="userIsSupportAgent" (click)="toHelpdesk()">To helpdesk</button>
-  <button *ngIf="userIsAdmin" (click)="toBackOffice()">To back office</button>
-</p>
+Loading...
