--- a/src/app/modules/back-office/settings/settings.component.html
+++ b/src/app/modules/back-office/settings/settings.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   <div class="space-between" >
     <span>Back office</span>
-    <span>{{user?.firstName}}</span>
+    <span>{{user?.firstName}} <mat-icon (click)="logout()">exit_to_app</mat-icon></span>
   </div>
 </mat-toolbar>
 <p>Statuses:</p>
