--- a/src/app/modules/helpdesk/helpdesk.component.html
+++ b/src/app/modules/helpdesk/helpdesk.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   <div class="space-between" >
     <span>Helpdesk</span>
-    <span>{{user?.firstName}}</span>
+    <span>{{user?.firstName}} <mat-icon (click)="logout()">exit_to_app</mat-icon></span>
   </div>
 </mat-toolbar>
 <router-outlet></router-outlet>
