--- a/src/app/modules/helpdesk/components/tickets/tickets-list/ticket-list-item/add-comment/add-comment.component.html
+++ b/src/app/modules/helpdesk/components/tickets/tickets-list/ticket-list-item/add-comment/add-comment.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="example-full-width">
-  <input matInput placeholder="Favorite food" [(ngModel)]="commentText">
+  <input matInput placeholder="Comment..." [(ngModel)]="commentText">
 </mat-form-field>
 
 
