--- a/src/app/modules/helpdesk/components/tickets/tickets-list/ticket-list-item/ticket-list-item.component.html
+++ b/src/app/modules/helpdesk/components/tickets/tickets-list/ticket-list-item/ticket-list-item.component.html
@@ -2,18 +2,22 @@
   <mat-card>
     <mat-card-header>
       <mat-card-title>{{ticket.issue}}
-        <app-status-select (statusIdChange)="statusUpdated($event)" [statusId]="ticket.statusId">
-        </app-status-select>
       </mat-card-title>
     </mat-card-header>
     <mat-card-content>
+      Status: <app-status-select (statusIdChange)="statusUpdated($event)" [statusId]="ticket.statusId">
+      </app-status-select> <br/>
+      Priority: <app-priority-select [priorityId]="ticket.priorityId" (priorityIdChange)="priorityUpdated($event)">
+
+      </app-priority-select>
+      <h3>Description:</h3>
       <p>
         {{ticket.details}}
       </p>
     </mat-card-content>
+    <app-add-comment (sendComment)="sendComment($event)"></app-add-comment>
     <app-list-comment [comments]="ticket.comments">
 
     </app-list-comment>
-    <app-add-comment (sendComment)="sendComment($event)"></app-add-comment>
   </mat-card>
 </div>
